corrections
In file included from Algorithms.hpp:8,
                 from Demo.cpp:7:
Graph.hpp:6:11: error: redefinition of ‘class ariel::Graph’
    6 |     class Graph
      |           ^~~~~
In file included from Demo.cpp:6:
Graph.hpp:6:11: note: previous definition of ‘class ariel::Graph’
    6 |     class Graph
      |           ^~~~~
make: *** [Makefile:26: Demo.o] Error 1



